[tool.poetry]
name = "aqs"
version = "0.0.1-alpha.0"
description = ""
authors = ["Jeremy Lucas <me@jerluc.com>"]

[tool.poetry.scripts]
aqs = "aqs.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
PyGObject = "^3.42.2"
pipewire_python = "^0.1.1"
pulsectl = "^22.3.2"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
PyGObject-stubs = "^1.0.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
